0.66 (01.31.2006) - John Siracusa <siracusa@mindspring.com>

    * Disabled implicit primary table sort clause in the Manager when 
      only fetching rows from the primary table.
    * Allow multiple pre_init_hook()s in the loader and metadata objects.
    * Improved auto-initialization of many-to-many relationships.
    * Added with_relationships, with_foreign_keys, with_unique_keys, db,
      and db_class attributes and make_classes() parameters to the loader.
    * TODO: arbitrary(?) join conditions for ... to many rels

0.65 (01.27.2006) - John Siracusa <siracusa@mindspring.com>

    * More MySQL 5 bitfield fixes.  (Reported by Svilen Ivanov)
      Important note: if you are using MySQL 5.0.3 or later and you
      have one or more BIT columns in a given table, you MUST call
      meta->allow_inline_column_values(1) when setting up the 
      Rose::DB::Object-derived class that fronts the table.
    * Added missing "use ..." statements to the code generated by
      perl_class_definition().
    * Fixed a bug that prevented certain kinds of self-referential
      relationships from being initialized properly.  (Reported by
      Bruno Czekay)

0.64 (01.19.2006) - John Siracusa <siracusa@mindspring.com>

    * Worked around yet more SQLite ORDER BY bugs.
    * Improved the column trigger implementation.
    * Added support for MySQL 5's brain-dead new BIT column type.  Classes
      must allow_inline_column_values(1) to use it due to the inability of
      DBD::mysql to bind BIT values correctly without explicit calls to
      DBI's bind_param() method.
    * Use alternate strategies for extracting foreign key information from
      MySQL 5 because the old way no longer works reliably.

0.63 (01.15.2006) - John Siracusa <siracusa@mindspring.com>

    * Made the with_map_records Manager argument work in the
      manager_args list for relationships.
    * Added the generate_manager_class_name() method to the loader.