@@ -911,7 +911,11 @@ sub auto_init_foreign_keys
 {
   my($self, %args) = @_;
 
-  return  if(exists $args{'with_foreign_keys'} && !$args{'with_foreign_keys'});
+  if(exists $args{'with_foreign_keys'} && !$args{'with_foreign_keys'})
+  {
+    $self->initialized_foreign_keys(1);
+    return;
+  }
 
   my $auto_foreign_keys     = $self->auto_generate_foreign_keys(%args);
   my $existing_foreign_keys = $self->foreign_keys;
@@ -934,6 +938,8 @@ sub auto_init_foreign_keys
   {
     $self->foreign_keys(@$auto_foreign_keys);
   }
+
+  $self->initialized_foreign_keys(1);
 
   return;
 }
